--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+In order to run the app following steps should be done:
+1. Set proper Shopify email and password here: https://github.com/gubenyas/dcs_builder/blob/master/lib/shopify_cred_scraper.rb#L12
+2. Set Shopify shop_url https://github.com/gubenyas/dcs_builder/blob/master/app/controllers/xml_builder_controller.rb#L7
